# wasmanoid

./: .drone.yml  Cargo.toml  Makefile.toml  Readme.md
game/: Cargo.toml  build.rs
game/assets/sprites/: ball.aseprite  bar.aseprite  bonus.aseprite  brick.aseprite  button.aseprite  font4x8.aseprite  logo.aseprite  wall.aseprite
game/src/: alloc.rs  assets.rs  audio.rs  graphics.rs  lib.rs  math.rs
game/src/game/: ball.rs  bar.rs  bonus.rs  brick.rs  highscore.rs  loop.rs  mod.rs
game/src/statemachine/: ingame.rs  initial.rs  mainmenu.rs  mod.rs  savescore.rs  splashscreen.rs  testintersections.rs
